Worked on the prettier set up and formatted all the files

--- a/nitoronlinetestportal/static/src/styles/create-test.css
+++ b/nitoronlinetestportal/static/src/styles/create-test.css
@@ -23,8 +23,9 @@
   vertical-align: middle;
   transition: background 0.25s;
 }
-.toggle-switch:before, .toggle-switch:after {
-  content: "";
+.toggle-switch:before,
+.toggle-switch:after {
+  content: '';
 }
 .toggle-switch:before {
   display: block;
